# 42_python_piscine

./: README.md
00/: ft_garden_name.py  ft_harvest_total.py  ft_hello_garden.py  ft_plot_area.py  ft_seed_inventory.py
00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
01/ex0/: ft_garden_intro.py
01/ex1/: ft_garden_data.py
01/ex2/: ft_plant_growth.py
01/ex3/: ft_plant_factory.py
ds_0_starting/: entrega  prueba
ds_0_starting/ex00/: FINDINGS.md  Hello.py
ds_0_starting/ex01/: FINDINGS.md  doc_prompt  format_ft_time.py  modules_doc_strings
ds_0_starting/ex02/: FINDINGS.md  doc_prompt  find_ft_type.py
ds_0_starting/ex03/: FINDINGS.md  NULL_not_found.py  doc_prompt
ds_0_starting/ex04/: FINDINGS.md  doc_prompt  whatis.py
ds_0_starting/ex05/: FINDINGS.md  building.py  doc_prompt
ds_0_starting/ex06/: FINDINGS.md  doc_prompt  filterstring.py  ft_filter.py
ds_0_starting/ex07/: FINDINGS.md  sos.py
ds_0_starting/ex08/: FINDINGS.md  Loading.py  tester.py
ds_0_starting/ex09/: FINDINGS.md  LICENSE  README.md  doc_prompt  pyproject.toml  tester.py
ds_0_starting/ex09/ft_package/: __init__.py  count_in_list.py  fraction_of_list.py
ds_1_array/: entrega  prueba
ds_1_array/ex00/: FINDINGS.md  doc_prompt  give_bmi.py  test_bmi_calculator.py  tester.py
ds_1_array/ex01/: FINDINGS.md  array2D.py  doc_prompt  tester.py
ds_1_array/ex02/: .doc_prompt.swp  FINDINGS.md  doc_prompt  load_image.py  tester.py
ds_2_datatable/: entrega  prueba
ds_3_oop/: entrega  prueba
ds_4_dod/: doc_prompt  doc_prompt.md  entrega  prueba
(+65 files in other folders)
